# ocallm

./: .gitignore  LICENSE  README.md  dune  dune-project  test.txt  test.txt.sanitized
data/: extraction.py
kernels/: Makefile  test.c  vec_mul.cl
lib/: autodiff.ml  dune  linalg.ml  matrix.ml  mnist.ml  nn.ml  opencl.ml  vector.ml  wikitext.ml  word2vec.ml
myopencl/: Makefile  stubs.c
myopencl/kernels/: vec_add.cl  vec_mul.cl
test/: dune
