(data_only_dirs kernels myopencl)

(dirs :standard \ data)

(rule
 (targets libmyopencl.so)
 (deps
  (source_tree myopencl))
 (mode
  (promote (until-clean)))
 (action
  (no-infer
   (progn
    (chdir
     myopencl
     (run make))
    (copy myopencl/libmyopencl.so libmyopencl.so)))))

; (executable
;  (name myopencl)
;  (flags -I . -cclib -lmyopencl))
